[gd_scene load_steps=6 format=3 uid="uid://c1n6yckg4ol3q"]

[ext_resource type="Script" uid="uid://dlm8ntir6b4e1" path="res://assets/world/background/background.gd" id="1_wm7xg"]
[ext_resource type="Texture2D" uid="uid://ctegjaigte11h" path="res://assets/world/background/layer1.png" id="1_xrx4o"]
[ext_resource type="Material" uid="uid://0awkb5h5srpq" path="res://assets/world/background/background.tres" id="2_gfa1i"]
[ext_resource type="Texture2D" uid="uid://dokinsblt6xns" path="res://assets/world/background/layer2.png" id="4_8emix"]
[ext_resource type="Texture2D" uid="uid://c7jxni32md6dr" path="res://assets/world/background/layer3.png" id="5_4sprh"]

[node name="Background" type="Node2D"]
z_index = -500
script = ExtResource("1_wm7xg")

[node name="Layer1" type="Sprite2D" parent="."]
texture_repeat = 2
material = ExtResource("2_gfa1i")
texture = ExtResource("1_xrx4o")

[node name="Layer2" type="Sprite2D" parent="."]
material = ExtResource("2_gfa1i")
texture = ExtResource("4_8emix")

[node name="Layer3" type="Sprite2D" parent="."]
material = ExtResource("2_gfa1i")
texture = ExtResource("5_4sprh")
